--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -6,11 +6,12 @@
     <title>Coba Git</title>
 </head>
 <body>
-    <h3>Data Mahasiswa</h3>
+    <h1>Data Mahasiswa</h1>
     <ul>
-        <li>Trianto : 1</li>
+        <li>Trianto : 1.1</li>
         <li>Wika : 2</li>
         <li>Mershie : 3</li>
     </ul>
+    <p>contoh paragraf</p>
 </body>
 </html>
