mengubah file mahasiswa.html

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -6,11 +6,11 @@
     <title>Coba Git</title>
 </head>
 <body>
-    <h3>Data Mahasiswa</h3>
+    <h4>Data Mahasiswa</h4>
     <ul>
-        <li>Trianto : 1</li>
         <li>Wika : 2</li>
         <li>Mershie : 3</li>
     </ul>
+    <p>coba paragraf</p>
 </body>
 </html>
